--- a/system-tests/homepage-test.yaml
+++ b/system-tests/homepage-test.yaml
@@ -11,13 +11,19 @@ spec:
         command: [python]
         source: |
           import requests
-          
+
           try:
             r = requests.get("https://dev.eodatahub.org.uk/")
-            print(r.status_code)
 
-          except request.ConnectionError:
-            print("Failed to connect")
+            if (r.status_code == 200):
+              criteria = "Success"
+            else:
+              criteria = "Failed - Http response is "
+
+            print("{} {}".format(criteria, r.status_code))
+
+          except requests.exceptions.RequestException as e:
+            raise SystemExit(e)
             
         resources: # limit the resources
           limits:
