--- a/system-tests/homepage-test-withitems.yaml
+++ b/system-tests/homepage-test-withitems.yaml
@@ -20,6 +20,12 @@ spec:
             - { url: 'https://dev.eodatahub.org.uk/apphub'}
             - { url: 'https://dev.eodatahub.org.uk/ades'}
             - { url: 'https://dev.eodatahub.org.uk/keycloak'}
+            - { url: 'https://pulsar.eodatahub.org.uk'}
+            - { url: 'https://test.eodatahub.org.uk'}
+            - { url: 'https://test.eodatahub.org.uk/vs'}
+            - { url: 'https://test.eodatahub.org.uk/apphub'}
+            - { url: 'https://test.eodatahub.org.uk/ades'}
+            - { url: 'https://test.eodatahub.org.uk/keycloak'}
 
     - name: loop-url-names
       inputs:
