--- a/system-tests/homepage-test-withitems.yaml
+++ b/system-tests/homepage-test-withitems.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Workflow
 metadata:
-  name: url-test-workflowtemplate # argo template create url-test-workflowtemplate.yaml
+  name: url-test-workflow
 spec:
   entrypoint: url-up-and-running 
   serviceAccountName: argo
