cron workflow running en ever hour from 9 a.m. to 5 p.m created

--- a/system-tests/homepage-test.yaml
+++ b/system-tests/homepage-test.yaml
@@ -4,6 +4,7 @@ metadata:
   generateName: homepage-test-  
 spec:
   entrypoint: homepage-up-and-running 
+  serviceAccountName: argo
   templates:
     - name: homepage-up-and-running
       inputs:
