serviceaccount name update

--- a/system-tests/homepage-test-withitems-cron.yaml
+++ b/system-tests/homepage-test-withitems-cron.yaml
@@ -9,7 +9,7 @@ spec:
   timezone: "UTC"
   workflowSpec:
     entrypoint: url-up-and-running 
-    serviceAccountName: argo
+    serviceAccountName: argo-workflows
     templates:
       - name: url-up-and-running
         steps:
